Fixed an issue causing the sidebar to get cut off

--- a/frontend/src/Routes/AboutUsPage.css
+++ b/frontend/src/Routes/AboutUsPage.css
@@ -19,11 +19,6 @@
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url("https://images.unsplash.com/photo-1617181669346-e41bb86eebfd?q=80&w=2019&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: cover;
     background-position: center;
-    overflow: hidden;
-}
-
-.aboutUsPageNavBar {
-    overflow: hidden;
 }
 
 /* Images and Info section*/
